# fray-benchmark

./: .dockerignore  .gitignore  .gitmodules  CONTAINER_USAGE.md  Dockerfile  README.md  Untitled.ipynb  build.gradle  build.gradle.kts  build.properties  command.sh  flake.nix  gradlew  playground.ipynb  pyproject.toml  runner.jpf  runner.py  settings.gradle  settings.gradle.kts
.ipynb_checkpoints/: playground-checkpoint.ipynb
bms/: .gitignore
bms/SCTBench/: build.gradle.kts  build.properties
bms/fraybench/: build.gradle.kts  settings.gradle.kts
bms/licheck/: build.gradle.kts
bms/time-example/: build.gradle.kts  settings.gradle.kts
data/: out.csv  results.csv  results_mem.csv  rf.csv  rf_mem.csv
fray_benchmark/: __main__.py  benchmarks.py  commons.py  configs.py  utils.py
fray_benchmark/assets/: apachecommon.txt  curator-framework.txt  curator.patch  curator.txt  flink-interesting.txt  flink.txt  guava.full.txt  guava.txt  (+17 more)
helpers/: rr_runner.sh
schedules/: AccountBad.csv  BluetoothDriverBad.csv  Carter01Bad.csv  CircularBufferBad.csv  Deadlock01Bad.csv  FsbenchBad.csv  Lazy01Bad.csv  QueueBad.csv  Reorder10Bad.csv  Reorder20Bad.csv  Reorder3Bad.csv  Reorder4Bad.csv  Reorder5Bad.csv  StackBad.csv  TokenRingBad.csv  Twostage100Bad.csv  TwostageBad.csv  Wronglock3Bad.csv  WronglockBad.csv
scripts/: build.sh  junit_runner.py  models.py  parsers.py  prompts.py  rerun.sh  run_benchmark.sh  run_bug.sh  run_experiment.py  run_jacontebe_target.sh  run_kickthetire.sh  run_realworld.sh  runall.sh  runexec.sh  sample_llm.py  visualize.ipynb  visualize.py
(+300 files in other folders)
