[tool.poetry]
name = "fray-benchmark"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "fray_benchmark"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
jinja2 = "^3.1.4"
scipy = "^1.14.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
